"update git url"

--- a/options.conf
+++ b/options.conf
@@ -2,7 +2,7 @@
 name = R-crul
 url = https://cran.r-project.org/src/contrib/crul_0.6.0.tar.gz
 archives = 
-giturl = 
+giturl = https://github.com/ropensci/crul.git
 
 [autospec]
 # build 32 bit libraries
