--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-crul
-url = https://cran.r-project.org/src/contrib/crul_1.1.0.tar.gz
+url = https://cran.r-project.org/src/contrib/crul_1.2.0.tar.gz
 archives = 
 giturl = https://github.com/ropensci/crul.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = false
 # add .so files to the lib package instead of dev
