--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = R-crul
-url = https://cran.r-project.org/src/contrib/crul_1.4.2.tar.gz
+url = https://cran.r-project.org/src/contrib/crul_1.5.0.tar.gz
 archives = 
 giturl = https://github.com/ropensci/crul.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = true
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
